--- a/alerts-gcp.yaml
+++ b/alerts-gcp.yaml
@@ -30,7 +30,7 @@ spec:
     - alert: Økende Consumer Lag - statistikk-behandling
       expr: sum(delta(kafka_consumergroup_group_topic_sum_lag{group="oh-statistikk-behandler" }[5m])) by(group, topic)/(5*60) >5
       for: 5m
-      description: 'consumer group *{{ $labels.group }}* øker med  {{ $value }} pr sekund på *{{ $labels.topic }}*'
+      description: "consumer group *{{ $labels.group }}* øker med  {{ $value }} pr sekund på *{{ $labels.topic }}*"
       action: "Sjekk logger"
       severity: danger
 
